<resources>
    <string name="app_name">AndroidAlerter</string>
    <string name="background_color">Background Color</string>
    <string name="icon">Icon</string>
    <string name="without_title">Without title</string>
    <string name="duration">Duration</string>
    <string name="here_text">Here text</string>
    <string name="on_click">On CLick</string>
    <string name="visibility_callback">Visibility Callback</string>
</resources>
